--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
+     "follow-redirects": ">=1.14.7"
     "@angular-devkit/build-angular": "~0.13.0",
     "@angular/cli": "~7.3.1",
     "@angular/compiler-cli": "~7.2.0",
